--- a/index.html
+++ b/index.html
@@ -5,19 +5,155 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Influence Gear</title>
+    <script src="https://kit.fontawesome.com/bac3fe0bce.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <!-- header section start -->
     <header>
+        <!-- navbar section -->
+<nav class="navbar-container">
+    <div class="logos">
+    <h2 class="logo-text"> Influencer products</h2>
+    </div>
+    <div class="menu">
+        <li>Home</li>
+        <li>Products</li>
+        <li>Sign up</li>
+        <li>Log In</li>
+        <li><i class="fa-solid fa-magnifying-glass"></i></li>
+        <li><i class="fa-solid fa-cart-arrow-down"></i></li>
+    </div>
+</nav>
+<!-- banner section -->
+<div class="banner-container">
+    <div class="banner-content">
+<h2 class="banner-tittle">Start your Journey as <br>
+    Influencer</h2>
+    <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros. Lectus faucibus.</p>
+    <button class="btn-primary">Prebook now <i class="fa-solid fa-arrow-right"> </i></button>
+    </div>
+    <div class="banner-photo">
+<img class="banner-pic" src="./images/main-camera.png" alt="">
+    </div>
+</div>
 
     </header>
     <!-- main section start -->
     <main>
-
+<!-- online market logo section -->
+<section class="online-market-logo">
+    <img src="./logos/Alibaba.svg" alt="">
+    <img src="./logos/Amazon.svg" alt="">
+    <img src="./logos/Daraz.pk Logo.svg" alt="">
+    <img src="./logos/Ebay.svg" alt="">
+    <img src="./logos/Rakuten.svg" alt="">
+    <img src="./logos/Walmart.svg" alt="">
+    <img src="./logos/Target.svg" alt="">
+</section>
+<!-- collection section -->
+<section class="collection-container">
+    <h2 class="collection-tittle">Popular Collection</h2>
+    <div class="card-container">
+        <div class="card">
+            <img src="./images/tripod.png" alt="">
+            <h3 class="card-tittle">Flex Tripod</h3>
+            <h4 class="prize">$50.48</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/lights.png" alt="">
+            <h3 class="card-tittle">Light Setup</h3>
+            <h4 class="prize">$1200.00</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/setup.png" alt="">
+            <h3 class="card-tittle">Photoshoot set</h3>
+            <h4 class="prize">$820.40</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/mic.png" alt="">
+            <h3 class="card-tittle">microphone</h3>
+            <h4 class="prize">$120.25</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/airpod.png" alt="">
+            <h3 class="card-tittle">Airbuds</h3>
+            <h4 class="prize">$100.00</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/drone.png" alt="">
+            <h3 class="card-tittle">Drone</h3>
+            <h4 class="prize">$980.25</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/camera.png" alt="">
+            <h3 class="card-tittle">Vlogging Camera</h3>
+            <h4 class="prize">$1800.80</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/single-light.png" alt="">
+            <h3 class="card-tittle">Green Screen</h3>
+            <h4 class="prize">$25.48</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="./images/action.png" alt="">
+            <h3 class="card-tittle">Action Camera</h3>
+            <h4 class="prize">$380.00</h4>
+            <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></p>
+            <p class="card-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </div>
+    <p class="see-more-btn">See More<i class="fa-solid fa-arrow-right"></i></p>
+</section>
+<!-- featured product container section-->
+<section class="featured-product-container">
+    <div class="featured-photo">
+<img src="./images/gear.png" alt="">
+    </div>
+    <div class="featured-content">
+<h1 class="featured-tittle">Featured products at one place</h1>
+<p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+<button id="btn-join" class="btn-primary">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+</section>
     </main>
     <!-- footer section start -->
     <footer>
-
+<div class="footer-container">
+    <h1 class="footer-tittle">Influencer products</h1>
+    <p class="footer-description">Copyright © 2020  influencer products All <br> rights reserved</p>
+    <div class="social-links">
+        <div class="link"><i class="fa-brands fa-instagram"></i></div>
+        <div class="link"><i class="fa-brands fa-dribbble"></i></div>
+        <div class="link"><i class="fa-brands fa-twitter"></i></div>
+        <div class="link"><i class="fa-brands fa-youtube"></i></div>
+    </div>
+</div>
     </footer>
 </body>
 </html>
