Influence gear is now responsive

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <main>
 <!-- online market logo section -->
 <section class="online-market-logo">
-    <img src="./logos/Alibaba.svg" alt="">
-    <img src="./logos/Amazon.svg" alt="">
-    <img src="./logos/Daraz.pk Logo.svg" alt="">
-    <img src="./logos/Ebay.svg" alt="">
-    <img src="./logos/Rakuten.svg" alt="">
-    <img src="./logos/Walmart.svg" alt="">
-    <img src="./logos/Target.svg" alt="">
+    <img class="logo" src="./logos/Alibaba.svg" alt="">
+    <img class="logo" src="./logos/Amazon.svg" alt="">
+    <img class="logo" src="./logos/Daraz.pk Logo.svg" alt="">
+    <img class="logo" src="./logos/Ebay.svg" alt="">
+    <img class="logo" src="./logos/Rakuten.svg" alt="">
+    <img class="logo" src="./logos/Walmart.svg" alt="">
+    <img class="logo" src="./logos/Target.svg" alt="">
 </section>
 <!-- collection section -->
 <section class="collection-container">
